tests/typing/faulty_indexing_a.sy
start :: fn do
    a :: [1, 2, 3]
    a[1]
end
// error: Got '[int]', which it cannot be
